Bug 163803 - FILESAVE Save to pptx loses fill on image
Summary: FILESAVE Save to pptx loses fill on image
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Jaume Pujantell
URL:
Whiteboard: target:25.2.0
Keywords: filter:pptx, implementationError
Depends on:
Blocks:
 
Reported: 2024-11-07 15:10 UTC by Jaume Pujantell
Modified: 2024-11-08 14:20 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
The presentation that changes on save (8.99 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2024-11-07 15:11 UTC, Jaume Pujantell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jaume Pujantell 2024-11-07 15:10:42 UTC
Description:
Given pptx a file that contains an image with a fill property. The fill is lost after saving (to pptx again).

Steps to Reproduce:
1. Open the given file
2. Save as pptx
3. Open the new saved file

Actual Results:
The image has changed: lost the black fill.

Expected Results:
It should look the same as the original.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dd77b743a703daa09563218cc8158db0ca2a4b97
CPU threads: 16; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Jaume Pujantell 2024-11-07 15:11:52 UTC
Created attachment 197480 [details]
The presentation that changes on save
Comment 2 Commit Notification 2024-11-08 14:20:02 UTC
Jaume Pujantell committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5ff283e3b841230a45715e48a251c3c4216d1cec

tdf#163803 oox: export fill on graphic object

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.