tdf#163803 oox: export fill on graphic object

The fill contents of a graphic object are lost when saving a pptx.

Change-Id: I055d778d4a92de18dfec59bd27c63a20c08b99f3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176208
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>